--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <h2>Functions with No Parameters</h2>
         <p>These functions perform an action but don’t need any input.</p>
-        <button>Say Hello</button>
-        <button>Show Today’s Date</button>
+        <button class="sayHelloBtn">Say Hello</button>
+        <button class = "showdateBtn">Show Todays Date</button>
         <button>Get Motivation</button>
         <button>Show who you Rep!</button>
         <div id="output1" class="output"></div>
